<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEmployeeInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/editMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/editMessage"
            android:textAlignment="center"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/editInstructionsMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/editInstructionsMessage"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/postalAddressId2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/phoneId2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/submitButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/round_button"
            android:onClick="onClick"
            android:text="@string/submit"
            android:textColor="#F1EFF4" />
    </LinearLayout>
</RelativeLayout>