<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SetEmployeeInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Welcome User"
            android:textAlignment="center"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/setUpMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setUpMessage"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/postalAddressId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/phoneId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/round_button"
            android:text="@string/submit"
            android:textColor="#F1EFF4" />

    </LinearLayout>

</RelativeLayout>