<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRequest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Service Request"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/firstNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstName" />

        <TextView
            android:id="@+id/lastNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName" />

        <TextView
            android:id="@+id/dobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob" />

        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requestAddress" />

        <TextView
            android:id="@+id/licenseTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licenseType" />

        <TextView
            android:id="@+id/proofOfResidenceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Proof of Residence" />

        <Button
            android:id="@+id/proofOfResidenceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="DownloadResidence"
            android:text="Download Photo" />

        <TextView
            android:id="@+id/customerPhotoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer Photo" />

        <Button
            android:id="@+id/customerPhotoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="DownloadPhoto"
            android:text="Download Photo" />

        <TextView
            android:id="@+id/proofOfStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Proof of Status" />

        <Button
            android:id="@+id/proofOfStatusButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="DownloadStatus"
            android:text="Download Photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rejectRequestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Reject"
                android:text="Reject" />

            <Button
                android:id="@+id/acceptRequestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Accept"
                android:text="Accept" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>